Refactor Ontario AQHI component to Ontario Air Quality Index; update service data sources and clean up unused files

--- a/src/app/components/ontarioAqhi/ontarioAqhi.component.html
+++ b/src/app/components/ontarioAqhi/ontarioAqhi.component.html
@@ -1,6 +1,6 @@
 <ion-card>
   <ion-card-header>
-    <ion-card-title>Ontario AQHI</ion-card-title>
+    <ion-card-title>Ontario Air Quality Index</ion-card-title>
   </ion-card-header>
   <ion-card-content>
     
